--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,8 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "main" ] # main 브랜치에 push될 때 실행
+  pull_request:
+    branches: [ "main" ] # main 브랜치에 pull_request될 때 실행
 
 jobs:
   build:
