--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,6 +6,7 @@ on:
     branches: [ "main" ] # main 브랜치에 push될 때 실행
   pull_request:
     branches: [ "main" ] # main 브랜치에 pull_request될 때 실행
+  workflow_dispatch:  # Actions 탭에서 수동으로 실행 가능하도록 설정
 
 jobs:
   build:
